--- a/docker-compose-confluent-cluster2.yml
+++ b/docker-compose-confluent-cluster2.yml
@@ -55,10 +55,10 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper1:12181,zookeeper2:22181,zookeeper3:32181
-      KAFKA_LISTENERS: LISTENER_BOB://kafka1:19093,LISTENER_FRED://kafka1:19092
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_BOB://kafka1:19093,LISTENER_FRED://DESKTOP-G8J2EVJ:19092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_BOB:PLAINTEXT,LISTENER_FRED:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_BOB
+      KAFKA_LISTENERS: INTERNAL://kafka1:19093,OUTSIDE://kafka1:19092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19093,OUTSIDE://172.28.128.1:19092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_LOG_DIRS: /kafka
     ports:
       - 19092:19092
@@ -76,10 +76,10 @@ services:
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper1:12181,zookeeper2:22181,zookeeper3:32181
-      KAFKA_LISTENERS: LISTENER_BOB://kafka2:29093,LISTENER_FRED://kafka2:29092
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_BOB://kafka2:29093,LISTENER_FRED://DESKTOP-G8J2EVJ:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_BOB:PLAINTEXT,LISTENER_FRED:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_BOB
+      KAFKA_LISTENERS: INTERNAL://kafka2:29093,OUTSIDE://kafka2:29092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka2:29093,OUTSIDE://172.28.128.1:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_LOG_DIRS: /kafka
     ports:
       - 29092:29092
@@ -97,13 +97,30 @@ services:
     environment:
       KAFKA_BROKER_ID: 3
       KAFKA_ZOOKEEPER_CONNECT: zookeeper1:12181,zookeeper2:22181,zookeeper3:32181
-      KAFKA_LISTENERS: LISTENER_BOB://kafka3:39093,LISTENER_FRED://kafka3:39092
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_BOB://kafka3:39093,LISTENER_FRED://DESKTOP-G8J2EVJ:39092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_BOB:PLAINTEXT,LISTENER_FRED:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_BOB
+      KAFKA_LISTENERS: INTERNAL://kafka3:39093,OUTSIDE://kafka3:39092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka3:39093,OUTSIDE://172.28.128.1:39092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_LOG_DIRS: /kafka
     ports:
       - 39092:39092
 
     volumes:
       - ./kafka/logs/3:/kafka
+    
+  akhq:
+    image: tchiotludo/akhq:latest
+    hostname: akhq
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+    environment:
+      AKHQ_CONFIGURATION: |
+        akhq:
+          connections:
+            kafka:
+              properties:
+                bootstrap.servers: 172.28.128.1:19092,172.28.128.1:29092,172.28.128.1:39092
+    ports:
+      - 8080:8080
